--- a/web2py/applications/menuet/views/core/a_item.html
+++ b/web2py/applications/menuet/views/core/a_item.html
@@ -30,7 +30,7 @@
                                                             style="color:red">
                     </i>
                         <span class="input-group-addon"><select id="item_unit">
-                            <option>Выберите...</option>
+                            <option value="1">Выберите...</option>
                         {{for opt in units:}}
                             <option value="{{=opt.id}}">{{=opt.f_name}}, {{=opt.f_description}}</option>
                         {{pass}}
