--- a/web2py/applications/menuet/views/core/a_item.html
+++ b/web2py/applications/menuet/views/core/a_item.html
@@ -74,6 +74,12 @@
                         <input type="text" id="item_ingrs" class="form-control bs-autocomplete ui-autocomplete-input">
                         <em class="text-muted">Спагетти, кальмары, мидии, помидоры</em>
                     </div>
+                    <div class="form-group">
+                        <label class="font-weight-bold">Тэги</label>
+
+                        <input class="form-control" name="item_tags" placeholder="Завтрак, острое..." id="item_tags"
+                               type="text">
+                    </div>
                 </div>
                 <div class="card-footer">
                     <input class="btn btn-primary" type="button" value="Добавить!" onclick="save_item()">
@@ -83,6 +89,9 @@
 
     </div>
 </div>
+
+        <input type="hidden" value="" id="item_tag_id">
+
 <script>
     var counter = 1;
 
@@ -113,6 +122,17 @@
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
         })
+    });
+
+     $("#item_tags").suggestions({
+        token: "bf69a05b6ce842dcd0cbc159648d19a8c49fdf33",
+        type: "I_TAGS",
+        count: 5,
+        onSelect: function (suggestion) {
+            $('#item_tags_id').val(function () {
+                return this.value + suggestion.id;
+            });
+        }
     });
 
     $(function () {
