--- a/web2py/applications/menuet/views/core/e_rest.html
+++ b/web2py/applications/menuet/views/core/e_rest.html
@@ -165,10 +165,9 @@
 <!--[if lt IE 10]>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajaxtransport-xdomainrequest/1.0.1/jquery.xdomainrequest.min.js"></script>
 <![endif]-->
-<script type="text/javascript"
-        src="https://cdn.jsdelivr.net/npm/suggestions-jquery@17.12.0/dist/js/jquery.suggestions.min.js"></script>
 
-<script type="text/javascript" src="{{=URL('static', 'js/shadow_sugg.min.js')}}"></script>
+
+<script type="text/javascript" src="{{=URL('static', 'js/shadow_sugg.js')}}"></script>
 <script>
     $(document).ready(function () {
 
