--- a/web2py/applications/menuet/views/core/a_item.html
+++ b/web2py/applications/menuet/views/core/a_item.html
@@ -71,7 +71,7 @@
                                                                                title="Ингридиенты будут авто-дополняться, если ингридиента нет - добавится новый"
                                                                                style="color:red">
                     </i>
-                        <input type="text" id="item_ingrs" class="form-control bs-autocomplete ui-autocomplete-input">
+                        <textarea type="text" id="item_ingrs" class="form-control bs-autocomplete ui-autocomplete-input"></textarea>
                         <em class="text-muted">Спагетти, кальмары, мидии, помидоры</em>
                     </div>
                     <div class="form-group">
