--- a/web2py/applications/menuet/views/default/index.html
+++ b/web2py/applications/menuet/views/default/index.html
@@ -1,78 +1,3 @@
 {{extend "layout.html"}}
 
-
-<h1>Restaraunts</h1>
-<h2>{{=A("Add menu via json", _href=URL('default','jsn_menu'))}}</h2>
-<h2>{{=A("shkololo rest", _href=URL('core','rest'))}}</h2>
-<h2>{{=A("Users mgmt", _href=URL('default','users_m'))}}</h2>
-
-
-<div class="col-sm-3">
-    <div class="card">
-        <div class="card-header">
-            Reset Locks
-        </div>
-        <div class="card-block">
-            <form name="reset_all_locks" enctype="multipart/form-data" method="post" action="{{=URL()}}">
-                <div class="form-group">
-                    <label class="font-weight-bold">Reset ALL LOCKS</label>
-                    <input type="submit" class="btn btn-danger" value="RESET">
-                    <input name="rst_all" type="hidden">
-                </div>
-            </form>
-            <div class="card-block">
-                <div class="form-group">
-                    <form name="reset_all_locks" enctype="multipart/form-data" method="post" action="{{=URL()}}">
-                        <label class="font-weight-bold">Find User</label>
-                        <input name="username" type="text" class="input-group">
-                    {{if 'username' not in request.vars or request.vars.username == "":}}
-                        <input type="submit" class="btn btn-primary" value="Find">
-                    </form>
-
-
-                {{else:}}
-                {{for user in found_users:}}
-                    <div class="card-footer" id="div_rst">
-                        <label class="font-weight-bold">Found Users:</label> <br>
-                        <label class="font-weight-bold">{{=user.username}}</label>
-                        <input type="button" value="RESET" class="btn btn-danger" onclick="reset_lock({{=user.id}})">
-
-                        <br>
-                    {{pass}}
-                    {{pass}}
-                    </div>
-
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<script type="application/javascript">
-    function reset_lock(user_id) {
-        var user = {};
-        user.id = user_id;
-        var DTO = {'user': user};
-        var data = JSON.stringify(DTO);
-
-        $.ajax({
-            type: 'POST',
-            url: '{{=URL('default', 'reset_lock')}}',
-            scriptCharset: "utf-8",
-            contentType: "application/json",
-            dataType: 'json',
-            data: data,
-            success: function (data) {
-                $("#div_rst").html('');
-                window.location.reload();
-                return data
-            },
-            error: function (data) {
-
-                window.location.reload();
-                return data
-
-            }
-        });
-    }
-</script>
+<H1><a href="{{=URL('core','rest')}}">Начать добавление МЕНЮ</a></H1>
