--- a/web2py/applications/menuet/views/core/a_item.html
+++ b/web2py/applications/menuet/views/core/a_item.html
@@ -71,14 +71,14 @@
                                                                                title="Ингридиенты будут авто-дополняться, если ингридиента нет - добавится новый"
                                                                                style="color:red">
                     </i>
-                        <textarea type="text" id="item_ingrs" class="form-control bs-autocomplete ui-autocomplete-input"></textarea>
+                        <textarea type="text" id="item_ingrs" class="form-control autoExpand " rows='3' data-min-rows='3'></textarea>
                         <em class="text-muted">Спагетти, кальмары, мидии, помидоры</em>
                     </div>
                     <div class="form-group">
                         <label class="font-weight-bold">Тэги</label>
 
-                        <textarea class="form-control" name="item_tags" placeholder="острое, от шеф-повара..."
-                                  id="item_tags"
+                        <textarea class="form-control " name="item_tags" placeholder="острое, от шеф-повара..."
+                                  id="item_tags" rows='2' data-min-rows='2'
                                   type="text"></textarea>
                     </div>
                 </div>
@@ -97,6 +97,23 @@
 <script type="text/javascript" src="{{=URL('static', 'js/shadow_sugg.js')}}"></script>
 
 <script>
+
+
+    $(document)
+    .one('focus.autoExpand', 'textarea.autoExpand', function(){
+        var savedValue = this.value;
+        this.value = '';
+        this.baseScrollHeight = this.scrollHeight;
+        this.value = savedValue;
+    })
+    .on('input.autoExpand', 'textarea.autoExpand', function(){
+        var minRows = this.getAttribute('data-min-rows')|0, rows;
+        this.rows = minRows;
+        rows = Math.ceil((this.scrollHeight - this.baseScrollHeight) / 16);
+        this.rows = minRows + rows;
+    });
+
+
     var counter = 1;
 
     function addRow() {
